@@ -2,6 +2,7 @@
 Version: 1.11.2
 Date: 2021.09.15
   Changes:
+    - Fixed crash when placing teleporters (Teleporter Redux and Personal Teleporter)
     - Re-added Black Market 2 hover credit
 ---------------------------------------------------------------------------------------------------
 Version: 1.11.1
